Tue Apr 23 17:40:40 2013  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/rexml/document.rb, lib/rexml/element.rb,
	  lib/rexml/formatters/pretty.rb: remove opinionated
	  language in documentation. [Bug #8309],
	  reported by Charles Beckmann

Tue Apr 23 14:04:44 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (getacl_response): parse the mailbox of an ACL
	  response correctly.  [ruby-core:54365] [Bug #8281]

Tue Apr 23 11:58:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_scrub): fix for UTF-32.  strlen() on strings
	  contain NUL returns wrong result, use sizeof operator instead.
	  [ruby-dev:45975] [Feature #6752]

Tue Apr 23 10:26:50 2013  Akinori MUSHA  <knu@iDaemons.org>

	* test/ruby/test_module.rb
	  (TestModule#test_const_get_invalid_name)
	  (test_const_defined_invalid_name): Fix expected values.

Tue Apr 23 09:51:26 2013  Akinori MUSHA  <knu@iDaemons.org>

	* string.c (rb_str_inspect): NUL should not be represented as "\0"
	  when octal digits may follow.  [ruby-core:54458] [Bug #8290]

Mon Apr 22 22:54:00 2013  Charlie Somerville  <charlie@charliesomerville.com>

	* insns.def (opt_mod): Use % operator if both operands are positive for
	  a significant performance improvement. Thanks to @samsaffron.

Mon Apr 22 17:09:37 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (r_object0): copy all instance variables not only generic
	  ivars, before calling post proc.  [ruby-core:51163] [Bug #7627]

Mon Apr 22 10:25:21 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* util.c (ruby_hdtoa): revert r29729.
	  If you want ruby to behave as before on x86, specify to use SSE like
	  -msse2 -mfpmath=sse for gcc.

Sun Apr 21 23:19:00 2013  Charlie Somerville  <charlie@charliesomerville.com>

	* configure.in: Revert using sigsetjmp by default due to performance
	  problems on some systems (eg. older Linux)

Sun Apr 21 21:35:00 2013  Charlie Somerville  <charlie@charliesomerville.com>
